# ne-202404-infra

./: .gitignore  README.adoc  environment.yml  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
docs/: flutter_service_worker.js  index.html  manifest.json  netlify.toml  version.json
docs/assets/: NOTICES
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: README.md  main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: sigturk_sakha_transliterator.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
node/: Cargo.toml  README.md  package-lock.json  package.json
python/: Cargo.toml
rust/: Cargo.toml  pyproject.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  sigturk_sakha_transliterator.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_sigturk_sakha_transliterator_app.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_sigturk_sakha_transliterator_app.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
